tests/snapshots/test_runner__tests__compiler__typecheck__import_8.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// circular import
import { spam } from "./import_6.kk"

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/import_7.kk:2:22
  │
2 │ import { spam } from "./import_8.kk"
  │                      ^^^^^^^^^^^^^^^ Cyclic dependencies detected.
  │
  = Explanation:

      tests/compiler/typecheck/import_8.kk imports tests/compiler/typecheck/import_6.kk
      tests/compiler/typecheck/import_6.kk imports tests/compiler/typecheck/import_7.kk
      tests/compiler/typecheck/import_7.kk imports tests/compiler/typecheck/import_8.kk
