tests/snapshots/test_runner__tests__compiler__typecheck__import_9.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// testing import all kind of symbols
import "./import_1.kk" foo=bar Color bomb

do bar.print()

let x: Color = Red()
do x.print()
do Green().print()
do true.bomb().print()
do "hi".bomb().print()

============
EXIT CODE
============
0

============
STDOUT
============
2
{ '$': 'Red', _: null }
{ '$': 'Green', _: null }
World
Hello

============
STDERR
============
