tests/snapshots/test_runner__tests__compiler__typecheck__interface_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
interface Equatable<T> {
}

let notEquals = <T> where Equatable<A>(a: T, b: T): Boolean => true
//                                  ^ Error: Unknown type variable

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/interface_3.kk:4:37
  │
4 │ let notEquals = <T> where Equatable<A>(a: T, b: T): Boolean => true
  │                                     ^ Unknown type variable
  │
  = No type variable has the name of A in this scope.
