tests/snapshots/test_runner__tests__compiler__typecheck__interface_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
interface Stringifiable<T> {
  let toString: (t: T) => String
}

implements Stringifiable<String> {
  // Error: missing implementation `toString`
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/interface_4.kk:5:12
  │
5 │ implements Stringifiable<String> {
  │            ^^^^^^^^^^^^^ Missing definitions
  │
  = Some definitions of this interface are not implemented, namely:

        toString
