tests/snapshots/test_runner__tests__compiler__typecheck__monadic_let_boolean_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do
  let guess = | x =>
    let true = x
    2
  null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/monadic_let_boolean_1.kk:4:5
  │
4 │     2
  │     ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Boolean     | + Integer   |
    +---------------+-------------+
